# hotdag

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
hotdag/: __about__.py  __init__.py  dbt_cloud.py  dbt_core.py  main.py  manifest.py  renderer.py  url_manifests.py
hotdag/server/: server.py
hotdag/server/routers/: __init__.py  cloud.py  manifest.py  url.py
tests/: __init__.py
